Make sure text looks good on iOS

--- a/packages/landing/src/landing.scss
+++ b/packages/landing/src/landing.scss
@@ -6,6 +6,10 @@
 $mobile-breakpoint: 425px;
 $tablet-breakpoint: 768px;
 
+html {
+  text-size-adjust: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
